<resources>
    <string name="app_name">PizzaApp</string>
    <string name="settings">Settings</string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="content_description">PizzaIcon</string>
    <string name="price">Price:</string>
    <string name="address">Address:</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="delete">Delete</string>
    <string name="favourites">Favourites</string>
    <string name="add_selected_items">Add selected items to cart</string>
    <string name="select">Select</string>
    <string name="phone">Phone:</string>
    <string name="email">E-Mail:</string>
    <string name="hint">You can name your pizza!</string>
    <string name="ham">Ham?</string>
    <string name="sausage">Sausage?</string>
    <string name="mushroom">Mushroom?</string>
    <string name="corn">Corn?</string>
    <string name="pineapple">Pineapple?</string>
    <string name="onion">Onion?</string>
    <string name="save">Save pizza to favourites?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="total_cost">Total cost:</string>
    <string name="buy">Buy items in cart</string>

    <string-array name="sizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
</resources>
