<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.bme.aut.pizzaapp.cart.NewPizzaDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:columnCount="4">

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ham" />

        <CheckBox
            android:id="@+id/cbHam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sausage" />

        <CheckBox
            android:id="@+id/cbSausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mushroom" />

        <CheckBox
            android:id="@+id/cbMushroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corn" />

        <CheckBox
            android:id="@+id/cbCorn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple" />

        <CheckBox
            android:id="@+id/cbPineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion" />

        <CheckBox
            android:id="@+id/cbOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
