<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:weightSum="10">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/content_description"
        android:src="@drawable/pizza2" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:columnCount="2">

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvFavouriteName"
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <TextView
            android:id="@+id/tvFavouritePrice"
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

    <ImageButton
        android:id="@+id/ibSelect"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_plus_white_48dp"
        android:text="@string/select" />

    <ImageButton
        android:id="@+id/ibDelete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_delete_white_48dp"
        android:text="@string/delete" />
</LinearLayout>