<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.bme.aut.pizzaapp.payment.PaymentActivity">


    <TextView
        style="@style/HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etCustomerName"
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/address" />

        <EditText
            android:id="@+id/etCustomerAddress"
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/etPhone"
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/LabelValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/total_cost" />

        <TextView
            android:id="@+id/tvTotalCost"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPay"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay" />

</LinearLayout>
