<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:weightSum="7">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/content_description"
        android:src="@drawable/pizza" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvName"
                style="@style/LabelValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/size" />

            <TextView
                android:id="@+id/tvSize"
                style="@style/LabelValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/LabelValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_weight="2"
        android:columnCount="3">

        <ImageView
            android:id="@+id/ivHam"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ham" />

        <ImageView
            android:id="@+id/ivSausage"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/sausage" />

        <ImageView
            android:id="@+id/ivMushroom"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/mushroom" />

        <ImageView
            android:id="@+id/ivCorn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/corn" />

        <ImageView
            android:id="@+id/ivPineapple"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/pineapple" />

        <ImageView
            android:id="@+id/ivOnion"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/onion" />
    </GridLayout>

    <ImageButton
        android:id="@+id/ibRemove"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_delete_white_48dp" />
</LinearLayout>